# SLAM

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README_ROS1.md  package.xml
cmake/: packages.cmake
config/: default.yaml  default_livox.yaml  default_mid360_cattle_ros1.yaml  default_mid360_slam.yaml  default_nclt.yaml  default_robosense.yaml  default_utbm.yaml  default_vbr.yaml
docs/: loc_eval_progress.md  ros1_build_errors.md  ros1_porting_audit.md
launch/: run_loc_offline_mid360.launch  run_loc_online_mid360.launch  run_slam_offline_mid360.launch  run_slam_online_mid360.launch
scripts/: analyze_loop_debug.py  check_input_health_logs.sh  check_lio_guess_diag.sh  check_odom_base_diag.sh  merge_bags.py  plot_loop_alignment_bev.py  plot_loop_alignment_live.py  plot_offline_loc_trajectories.py  plot_offline_slam_trajectory.py  run_loc_offline_mid360.sh  run_loc_offline_mid360_batch_test.sh  run_loc_online_mid360.sh  run_slam_offline_mid360.sh  run_slam_online_mid360.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  check_adjacent_pose_gate.cc  check_miao_loop_no_commit.cc  check_source_scan_accum_selection.cc  run_frontend_offline.cc  run_loc_offline.cc  run_loc_online.cc  run_loop_offline.cc  run_slam_offline.cc  run_slam_online.cc
src/common/: keyframe.h  loop_candidate.h
src/core/: lightning_math.hpp
src/core/lio/: laser_mapping.cc  laser_mapping.h  pointcloud_preprocess.cc  pointcloud_preprocess.h
src/core/localization/: localization.cpp  localization.h  localization_result.h
src/core/localization/lidar_loc/: lidar_loc.cc  lidar_loc.h
src/core/localization/pose_graph/: pgo_impl.cc  pgo_impl.h
src/core/loop_closing/: loop_closing.cc  loop_closing.h
src/core/miao/core/graph/: graph.cc  optimizer.cc
src/core/system/: loc_system.cc  loc_system.h  slam.cc  slam.h
src/ui/: pangolin_window.cc  pangolin_window_impl.cc  pangolin_window_impl.h
src/utils/: evaluation_writer.cc  evaluation_writer.h  input_health_logger.cc  input_health_logger.h  lio_guess_diag.cc  lio_guess_diag.h  loop_debug_logger.cc  loop_debug_logger.h  odom_base_diag.cc  odom_base_diag.h
src/wrapper/: bag_io.cc  bag_io.h  ros_utils.h
tools/eval/: README.md
