<?xml version="1.0"?>
<package format="2">
    <name>lightning</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="gao.xiang.thu@gmail.com">gaoxiang</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>visualization_msgs</depend>
    <depend>rosbag</depend>
    <depend>livox_ros_driver2</depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

    <export>
    </export>
</package>
